--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -1412,11 +1412,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
-        "id": "BLl0bt7iAoZZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BLl0bt7iAoZZ",
+        "outputId": "633f5a21-84ee-44d2-944f-10e70ee5bf3c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100  is less than  90\n"
+          ]
+        }
+      ],
       "source": [
         "score1 = 100\n",
         "score2 = 90\n",
@@ -1443,11 +1455,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
-        "id": "U1ggNWVtAoZb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U1ggNWVtAoZb",
+        "outputId": "78791b62-a8ca-47d5-dbc0-d91f0c532033"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ],
       "source": [
         "num  = 22\n",
         "even = 1 if num % 2 == 0 else 0\n",
@@ -1456,11 +1483,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
-        "id": "pzcej2qAAoZb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pzcej2qAAoZb",
+        "outputId": "1772cd54-492a-4a84-8072-e076faad1b53"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100  is greater than 90\n"
+          ]
+        }
+      ],
       "source": [
         "print (score2, \" is greater than \", score1) if ( score1 < score2) else print(score1, \" is greater than\", score2)"
       ]
@@ -1476,7 +1515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "id": "w3RZlhFLAoZc"
       },
@@ -1497,15 +1536,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "HGKpP5uLAoZd",
-        "outputId": "af6fe1af-4848-493b-dce5-9fd5eb0d30e4"
+        "outputId": "b72f008f-6704-4fb9-f424-58740554df05"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1\n"
           ]
@@ -1546,21 +1588,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "JJPVEAD7AoZe",
-        "outputId": "bb3f4ca4-2439-4684-c3e9-1e3c149b7ce2"
+        "outputId": "b981ee9f-b1c5-433a-8ca7-d0afeb50c1a2"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
-          "execution_count": 32,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 67
         }
       ],
       "source": [
@@ -1569,18 +1614,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
-        "id": "nQZP1xQWAoZf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nQZP1xQWAoZf",
+        "outputId": "dff6d45a-8c85-404c-9376-aa9e9300e260"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ],
       "source": [
         "True and True and True # will return True"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "id": "wYd8zQYzAoZf"
       },
@@ -1596,21 +1656,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "BqJ1gsvVAoZf",
-        "outputId": "98fb9220-e19f-4dea-dd8c-e6127e667ebc"
+        "outputId": "83f0b90d-d142-4512-c8de-bdd08bbb6a38"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
-          "execution_count": 38,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 70
         }
       ],
       "source": [
@@ -1622,11 +1685,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
-        "id": "qZBnwllLAoZg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qZBnwllLAoZg",
+        "outputId": "7e5a7d29-ece5-4ee2-eefd-ff4c5541c981"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "99"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ],
       "source": [
         "num1 = 10; num2 = 20;\n",
         "\n",
@@ -1636,11 +1714,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
-        "id": "ShMBQ3z6AoZg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ShMBQ3z6AoZg",
+        "outputId": "635c6d29-e496-4b7a-ce8a-bec0c3db46ec"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 72
+        }
+      ],
       "source": [
         "num1 = 10; num2 = 20;\n",
         "\n",
@@ -1650,11 +1743,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {
-        "id": "2Bu-WjO9AoZh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Bu-WjO9AoZh",
+        "outputId": "ff4ba84f-58f3-4000-8032-9d73a33a18e0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "10\n"
+          ]
+        }
+      ],
       "source": [
         "a = 10\n",
         "b = 5\n",
@@ -1666,11 +1772,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 74,
       "metadata": {
-        "id": "v_mZoi2-AoZh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v_mZoi2-AoZh",
+        "outputId": "74f6b5f7-30c1-40d3-a1cc-c4b39d5e98ba"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ],
       "source": [
         "a = 10\n",
         "b = 5\n",
@@ -1680,11 +1798,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {
-        "id": "0eQBSv73AoZi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0eQBSv73AoZi",
+        "outputId": "39738370-8742-4d2f-af2e-56482b5ce60f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4]\n"
+          ]
+        }
+      ],
       "source": [
         "l1 = [1,2,3,4,5]\n",
         "\n",
@@ -1713,15 +1843,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
-        "id": "TcxIwAPuAoZj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TcxIwAPuAoZj",
+        "outputId": "47bc7329-37ab-46a7-fa27-022ee381c8de"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a num: 80\n",
+            "0\n"
+          ]
+        }
+      ],
       "source": [
         "num = int(input('Enter a num: '))\n",
         "\n",
-        "flag = 0 # complete this code"
+        "flag = 0 # complete this code\n",
+        "print (flag)"
       ]
     },
     {
@@ -1767,11 +1911,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
-        "id": "_ikIEcC2AoZj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_ikIEcC2AoZj",
+        "outputId": "6f6cdda2-f084-4a17-acfe-e46b8e81f090"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mary  is greater than or equal to Macy\n"
+          ]
+        }
+      ],
       "source": [
         "name1 = 'Mary'\n",
         "name2 = 'Macy'\n",
@@ -1785,15 +1941,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "p28HpjPNAoZk",
-        "outputId": "e91646e9-1fda-40ef-be9b-bce6cd0dd89b"
+        "outputId": "459666a8-627f-4e20-9a23-dc55497822f1"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Mary  is less than or equal to Nancy\n"
           ]
@@ -1825,11 +1984,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {
-        "id": "TR0czTYEAoZm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TR0czTYEAoZm",
+        "outputId": "a3588bb2-0714-4682-f007-2388e0a71a82"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mary  is shorter than Mariella\n"
+          ]
+        }
+      ],
       "source": [
         "name1 = 'Mary'\n",
         "name2 = 'Mariella'\n",
@@ -1875,11 +2046,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
-        "id": "abgqnv9RAoZm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "abgqnv9RAoZm",
+        "outputId": "5f73b4b9-4d84-4b00-a7bb-8bacbd839429"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ],
       "source": [
         "'BANANA'.isupper()\n",
         "\n",
@@ -1892,11 +2078,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "metadata": {
-        "id": "TOs8tiqiAoZo"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "TOs8tiqiAoZo",
+        "outputId": "e2d7fac7-4a26-4309-fac8-e119985b25ad"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'three!'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ],
       "source": [
         "\n",
         "'   spacious   '.lstrip()\n",
@@ -1910,11 +2115,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {
-        "id": "B8J2w4qrAoZp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B8J2w4qrAoZp",
+        "outputId": "8dbc6697-36f5-4b73-aae8-dfeee3d37337"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "name@company\n",
+            "company.com\n",
+            "name@company.com\n"
+          ]
+        }
+      ],
       "source": [
         "email_str = \"name@company.com\"\n",
         "result1 = email_str.rstrip(\".com\" )\n",
@@ -1926,11 +2145,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "metadata": {
-        "id": "qaaZ-H8xAoZp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qaaZ-H8xAoZp",
+        "outputId": "7ee4a7f7-21bc-455a-f248-c9d4e74a4731"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "@company.com\n",
+            "@c\n",
+            "@company.com\n",
+            "@company.com\n",
+            "@company.com\n"
+          ]
+        }
+      ],
       "source": [
         "email_str = \"name@company.com\"\n",
         "idx = email_str.find('@')\n",
@@ -1951,11 +2187,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 84,
       "metadata": {
-        "id": "f8PwvKv1AoZp"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "f8PwvKv1AoZp",
+        "outputId": "bd63787a-bdf1-49b9-83bb-b5154a5f2433"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Monty'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ],
       "source": [
         "\n",
         "'   spacious   '.rstrip()\n",
@@ -1969,11 +2224,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 85,
       "metadata": {
-        "id": "JT5i7CZGAoZq"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "JT5i7CZGAoZq",
+        "outputId": "5fb312e1-3d9a-4fd9-b8e2-4d1290709217"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'example'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ],
       "source": [
         "\n",
         "\n",
